<resources>
    <string name="app_name">MarketHelper</string>
    <string name="title_home">首页</string>
    <string name="title_tools">工具</string>
    <string name="title_notifications">消息</string>
    <string name="title_user">我的</string>
    <string name="title_management">管理</string>
    <string name="text_please_input_goods">请输入商品名称</string>
    <string name="text_login_tips">登录后，查看实际销售商品及价格</string>
    <string name="login_sms_login_txt">手机号登录</string>
    <string name="login_bind_phone_hint">请输入手机号码</string>
    <string name="login_sms_code_hint">请输入短信验证码</string>
    <string name="login_get_sms_code_txt">获取验证码</string>
    <string name="login_agreement_short_txt">登录即代表同意</string>
    <string name="register_title">没有账号，现在注册</string>
    <string name="login_txt">登录</string>
    <string name="login_service_agreement">《商家助手服务协议》</string>
    <string name="register_choice">请选择注册的类型</string>
    <string name="register_customer">普通用户</string>
    <string name="register_customer_intro">适合有消费需求的顾客注册，您可以尽情浏览和购置感兴趣的商品。</string>
    <string name="register_store_intro">适用于门店、超市、便利店等身份的注册。平台将为您提供帮助和支持，便于您销售和管理商品。</string>
    <string name="register_store">终端</string>
    <string name="register_nick_name">请输入用户名称</string>
    <string name="register_txt">注册</string>
    <string name="register_address">请确认您的收获地址</string>
    <string name="register_real_name">请输入真实姓名</string>
    <string name="string_regain_verification_code">重新获取(%s)</string>
    <string name="string_goods_price_with_unit">%s元/%s</string>
    <string name="string_goods_total_price">￥%s</string>
    <string name="title_cart">订单</string>
</resources>