<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/app_main_tab_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tools"
        android:icon="@drawable/app_main_tab_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/app_main_tab_message"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/app_main_tab_user"
        android:title="@string/title_user" />

    <item
        android:id="@+id/navigation_management"
        android:icon="@drawable/app_main_tab_management"
        android:title="@string/title_management"/>

</menu>