<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.month.markethelper.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tools"
        android:name="com.month.markethelper.fragment.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.month.markethelper.fragment.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.month.markethelper.fragment.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
    </fragment>

    <fragment
        android:id="@+id/navigation_management"
        android:name="com.month.markethelper.fragment.management.ManagementFragment"
        android:label="@string/title_management" />

</navigation>