<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterChoiceActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/actionbar_rl"
        layout="@layout/actionbar_layout" />

    <TextView
        android:id="@+id/register_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_20"
        android:layout_marginTop="@dimen/d_20"
        android:text="@string/register_choice"
        android:textColor="@color/color_333333"
        android:textStyle="bold"
        android:textSize="@dimen/s_26" />

    <androidx.cardview.widget.CardView
        android:id="@+id/customer_register_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_20"
        android:layout_marginHorizontal="@dimen/d_20"
        app:cardCornerRadius="@dimen/d_10"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_F8F8F8"
            android:padding="@dimen/d_15">

            <ImageView
                android:id="@+id/customer_profile"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_marginEnd="@dimen/d_10"
                android:src="@drawable/ic_register_customer"/>

            <TextView
                android:id="@+id/customer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/customer_profile"
                android:layout_marginBottom="@dimen/d_03"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/s_16"
                android:text="@string/register_customer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_tv"
                android:layout_toEndOf="@id/customer_profile"
                android:text="@string/register_customer_intro"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/store_register_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_20"
        android:layout_marginHorizontal="@dimen/d_20"
        app:cardCornerRadius="@dimen/d_10"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_F8F8F8"
            android:padding="@dimen/d_15">

            <ImageView
                android:id="@+id/store_profile_iv"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_marginEnd="@dimen/d_10"
                android:src="@drawable/ic_register_store"/>

            <TextView
                android:id="@+id/store_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/store_profile_iv"
                android:layout_marginBottom="@dimen/d_03"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/s_16"
                android:text="@string/register_store"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/store_tv"
                android:layout_toEndOf="@id/store_profile_iv"
                android:text="@string/register_store_intro"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>