<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.month.markethelper.fragment.home.HomeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.home.HomeFragment">

        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            app:banner_indicator_marginBottom="12dp" />

        <RelativeLayout
            android:id="@+id/search_ll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/ui_shape_search_box"
            android:layout_marginTop="200dp">

            <TextView
                android:id="@+id/search_tv"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingStart="19dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/screen_iv"
                android:gravity="center_vertical"
                android:background="@drawable/ui_shape_corner_16dp_white"
                android:textSize="@dimen/sp_14"
                android:text="@string/text_please_input_goods"
                android:maxLength="20" />

            <ImageView
                android:id="@+id/screen_iv"
                android:layout_width="24dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_filtrate" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/color_F8F8F8"
            android:layout_below="@id/search_ll">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/left_category_list"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@color/color_F8F8F8"
                android:overScrollMode="never" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/right_content_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:overScrollMode="never" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_tips_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ui_shape_corner_10dp_grey"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="7dp"
            android:paddingRight="20dp"
            android:paddingBottom="7dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_login_tips"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ui_shape_corner_20dp_red"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/login_txt"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>
</layout>
